--- a/style.css
+++ b/style.css
@@ -4,91 +4,82 @@
  box-sizing: border-box;
 }
  .contanier{
-    /* width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto; */
-
-        width: 100%;
-        height: 70px;
-        background-color:white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 200px;
+ /* width: 100%;
+ padding-right: 15px;
+ padding-left: 15px;
+ margin-right: auto;
+ margin-left: auto; */
+ width: 100%;
+ position: fixed;
+ background-color:white; 
  }
   .star{
-    width: 100%;
- /* height: 70px; */
+ width: 100%;
  background-color: black;
  display: flex;
  align-items: center;
- justify-content: center;
- gap: 400px;
+ justify-content: space-between;
+ padding: 20px;
+ position: fixed;
 }
  .star2{
-    width: 400px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 35px;
-    margin-top: 10px;
-    border: 1px transparent;
+ width: 60%;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ gap: 35px;
  }
 .start1{
-    width: 200px;
-    height: 10px;
-    margin-top:8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    gap: 20px;
-    color: white;
+  width:40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  color: white;
+  }
+  .start1 img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   }
   .start2{
-    width: 60px;
-    height: 10px;
-    margin-top: 8px;
-    font-size: 20px;
-    color: white;
+  font-size: 20px;
+  color: white;
   }
  .start3{
-    width: 60px;
-    height: 10px;
-    margin-top: 8px;
-    font-size:20px ;
-    color: white;
+  width: 60px;
+  height: 10px;
+  margin-top: 8px;
+  font-size:20px ;
+  color: white;
  }
  .start4{
-     width: 60px;
-     height: 10px;
-     margin-top: 8px;
-     font-size: 20px;
-     color: white;
-   }
-  .start5{
-     width: 60px;
-     height: 10px;
-     margin-top: 8px;
-     font-size:20px ;
-     color: white;
+  width: 60px;
+  height: 10px;
+  margin-top: 8px;
+  font-size: 20px;
+  color: white;
+  }
+ .start5{
+  width: 60px;
+  height: 10px;
+  margin-top: 8px;
+  font-size:20px ;
+  color: white;
   }
   .start6{
-     width: 60px;
-     height: 10px;
-     margin-top: 8px;
-     font-size: 20px;
-     color: white;
-   }
+  width: 60px;
+  height: 10px;
+  margin-top: 8px;
+  font-size: 20px;
+  color: white;
+  }
   .start7{
-     width: 60px;
-     height: 10px;
-     margin-top: 8px;
-     color: white;
-     font-size:20px ;
+  width: 60px;
+  height: 10px;
+  margin-top: 8px;
+  color: white;
+  font-size:20px ;
   }
   .start8{
     width: 60px;
@@ -150,30 +141,317 @@
  background-size: cover;
 }
 .bing1 h3{
-    display: flex;
-    color: white;
-    font-weight: 400;
+  display: flex;
+  color: white;
+  font-weight: 400;
 }
 .bing1 h1{
-    color: white;
-    font-size: 50px;
-    margin-top: 20px;
+  color: white;
+  font-size: 50px;
+  margin-top: 20px;
 }
 .bing1 p{
-    color: white;
-    margin-top: 20px;
+  color: white;
+  margin-top: 20px;
 }
 .Get{
-    width: 200px;
-    height: 50px;
-    background-color: yellow;
-    margin-top: 20px;
-    cursor: pointer;
-     border:1px solid transparent;
+  width: 200px;
+  height: 50px;
+  background-color: yellow;
+  margin-top: 20px;
+  cursor: pointer;
+  border:1px solid transparent;
+  border: 2px yellow;
 }
 .Get:hover{
-    background-color:transparent;
+background-color:transparent;
 }
 .Get{
  color: white;
 }
+ .basliq{
+ width: 100%;
+ height: 200px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ margin-left: 80px;
+}
+ .Basic{
+ width: 500px;
+ height: 100px;
+ margin-bottom:70px;
+ font-size: 20px;
+ }
+ .Service{
+ width: 100%;
+ height: 500px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ gap: 100px;
+ }
+ .Service1{
+  width: 300px;
+  height: 400px;
+  cursor: auto;
+  transition: all 1s;
+ }
+ .Service1:hover{
+  background-color:yellow;
+ }
+ .rep1{
+  width: 250px;
+  height: 150px;
+  display: flex;
+  margin-left: 25px;
+  margin-top: 20px;
+ }
+ .Service2{
+  width: 300px;
+  height: 400px;
+  cursor: auto;
+  transition: all 1s;
+ }
+ .Service2:hover{
+  background-color:yellow;
+ }
+ .rep2{
+  width: 248px;
+  height: 150px;
+  display: flex;
+  margin-left: 27px;
+  margin-top: 20px;
+ }
+ .Service3{
+  width: 300px;
+  height: 400px;
+  cursor: auto;
+  transition: all 1s;
+ }
+ .Service3:hover{
+  background-color:yellow;
+ }
+ .rep3{
+  width: 250px;
+  height: 150px;
+  display: flex;
+  margin-left: 25px;
+  margin-top: 20px;
+ }
+ .text1{
+  width: 250px;
+  height: 200px;
+  margin-left: 27px;
+  margin-top: 18px;
+ }
+ .text2{
+  width: 250px;
+  height: 200px;
+  margin-left: 27px;
+  margin-top: 18px;
+ }
+ .text3{
+  width: 250px;
+  height: 200px;
+  margin-left: 27px;
+  margin-top: 18px;
+ }
+ p{
+  color:gray;
+ }
+ .basliq2{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .good{
+  width: 500px;
+  height: 150px;
+ }
+ .basliq3{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+ }
+ .secret1{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret1:hover{
+  background-color: yellow;
+ }
+ .secret2{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret2:hover{
+  background-color: yellow;
+ }
+ .secret3{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret3:hover{
+  background-color: yellow;
+ }
+ .basliq4{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+ }
+ .secret4{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret4:hover{
+  background-color: yellow;
+ }
+ .secret5{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret5:hover{
+  background-color: yellow;
+ }
+ .secret6{
+  width:250px;
+  height:150px;
+  cursor: pointer;
+ }
+ .secret6:hover{
+  background-color: yellow;
+ }
+ .flash{
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 100px;
+ }
+ .flash1{
+ width: 700px;
+ height: 100px;
+ background-color: white;
+ }
+ .paralel{
+  width: 100%;
+  height:600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+ }
+ .paralel1{
+  width: 263px;
+  height: 400px;
+  background-color: beige;
+ }
+ .part1{
+  width: 262,5px;
+  height: 100px;
+ }
+ .bbb{
+  width: 262,5px;
+  height: 200px;
+ }
+ .space{
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  margin-top: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+
+ .paralel2{
+  width: 262,5px;
+  height: 400px;
+  background-color: beige;
+ }
+ .part2{
+  width: 262,5px;
+  height: 100px;
+ }
+ .aaa{
+  width: 262,5px;
+  height: 200px;
+ }
+ .space1{
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  margin-top: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .paralel3{
+  width: 262,5px;
+  height: 400px;
+  background-color: beige;
+ }
+ .part3{
+  width: 262,5px;
+  height: 100px;
+ }
+ .ccc{
+  width: 262,5px;
+  height: 200px;
+ }
+ .space2{
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  margin-top: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .paralel4{
+  width: 262px;
+  height: 400px;
+  background-color: beige;
+ }
+ .part4{
+  width: 262,5px;
+  height: 100px;
+ }
+ .ddd{
+  width: 262,5px;
+  height: 200px;
+ }
+ .space3{
+  width: 150px;
+  height: 40px;
+  background-color: black;
+  margin-top: 50px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+
+ 
+ 
